@@ -1,3 +1,4 @@
+* added --same-credentials flag
 * fixed parsing of hosts file
 
 0.1.1
